# PicoPI_FreeRTOS

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  a.out  server.out  zmq_client.py  zmq_server.c  zmq_server_test.c
FreeRTOS/freertos-pi-pico/app/: CMakeCache.txt  CMakeLists.txt  Makefile  app.dis  app.elf  app.elf.map  app.uf2  cmake_install.cmake  run.sh
FreeRTOS/freertos-pi-pico/app/FREERTOS_KERNEL/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/docs/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default.dis  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2040/hardware_regs/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2040/pico_platform/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile  (+1 more)
FreeRTOS/freertos-pi-pico/app/pico-sdk/tools/: Makefile  cmake_install.cmake
FreeRTOS/freertos-pi-pico/app/picotool/tmp/: picotoolBuild-cfgcmd.txt
FreeRTOS/freertos-pi-pico/app/src/: main.c
picoPI/: .gitignore  CMakeLists.txt  cmake.sh  requirements.sh  run.sh  setup.sh  setup_lib.sh
picoPI/src/: control.py  listener.py  main.c  main.c.bak  main.py  main1.c  pwm.c  pwm.py  sender.py  sender_single.py
picoPI/src/inc/: commands.h  defines.h  functions.h  pwm.h  queues.h  tasks.h
(+356 files in other folders)
